Project

General

Profile

Actions

Bug #41953

closed

rgw: skip add empty multipart list to gc in abort_multipart_upload

Added by Tianshan Qu over 4 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

abort_multipart_upload will collect uploaded parts to gc.
But if we have no uploaded parts, it still send to gc.

Actions #2

Updated by Casey Bodley over 4 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 30511
Actions #3

Updated by Casey Bodley over 4 years ago

  • Status changed from Fix Under Review to 7
Actions #4

Updated by Patrick Donnelly over 4 years ago

  • Status changed from 7 to Fix Under Review
Actions #5

Updated by J. Eric Ivancich about 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF