rgw: skip add empty multipart chain to gc in abort_multipart_upload

Fixes: https://tracker.ceph.com/issues/41953

Signed-off-by: Tianshan Qu <tianshan@xsky.com>